# cctv-monitoring

./: .clinerules  .env.example  .gitignore  .gitinore  .roo-context.txt  .rooignore  .rooignore-large  .roomodes  ARCHITECTURE.md  DEVELOPMENT.md  SECURITY.md  TODO.md  agent.md  lighthouserc.js
.github/workflows/: ci.yml  deploy.yml  e2e-a11y.yml  lighthouse.yml  sbom.yml  security-scan.yml
backend/: .air.toml  .env.example  .gitignore  .golangci.yml  Dockerfile  README.md  config.yaml  go.mod  go.sum  launch.json  main.go  sbom.json
backend/.well-known/: security.txt
backend/analytics/: config.yaml  etl.py  predict.py  predict_worker.py  requirements.txt  train.py
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: ie_mode.rs  lib.rs  main.rs
dh-p2p/: README.md  main.py
docs/: frontend-mobile.md  keyboard-navigation-map.md
edge-agent/: Dockerfile.openwrt  README.md  go.mod  go.sum
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  sbom.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
mobile/: App.tsx  app.json  package.json  tsconfig.json
p2p-gateway/: .env.example  Dockerfile  config.yaml  go.mod  go.sum
plans/: 2026-06-25-SEC02-fix-panics.md  2026-06-25-UX01-mobile-completion-wizard.md  2026-06-27-p1-implementation.md  README.md  code-review-epic1-2026-06-24.md  map-iframe-plan.md  ux-roadmap-execution-plan.md
playwright-report-visual/: index.html
tests/: playwright.config.ts
(+1336 files in other folders)
